Update MatchmakingRatingEventService.java